--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
-!
 <!DOCTYPE html>
 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <body>
+    <title>TIME TABLE</title>
 
-    </body>
 </head>
-</html>
+<body>
+    <table border="1">
+        
+            <caption><b>TIME TABLE</b></caption><br<br>
+        <thead align="center">
+            <tr>
+                <th>Day/Period</th>
+                <th> I <br> 9:30-10:20</th>
+                <th>II<br> 10:20-11:10</th>
+                <th> III <br> 11:10-12:00</th>
+                <th>12:00-12:40</th>
+                <th>IV<br>12:40-1:30</th>
+                <th>V<br>1:30-2:30</th>
+                <th>VI<br>2:20-3:10</th>
+                <th>VII<br>3:10-4:00</th>
+            </tr>
+        </thead>
+        <tbody align="center">
+            <tr >
+                <td><b>Monday</b></td>
+                <td>Eng</td>
+                <td>Mat</td>
+                <td>Che</td>
+                <td></td>
+                <td colspan="3">LAB</td>
+                <td>Phy</td>
+            </tr>
+            <tr>
+                <td><b>Tuesday</b></td>
+                <td colspan="3">LAB</td>
+                <td></td>
+                <td>Eng</td>
+                <td>Che</td>
+                <td>Mat</td>
+                <td>SPORTS</td>
+            </tr>
+        </tbody>
+
+    </table>
+</body>
