--- a/index.html
+++ b/index.html
@@ -43,6 +43,44 @@
                 <td>Mat</td>
                 <td>SPORTS</td>
             </tr>
+            <tr>
+                <td><b>Wednesday</b></td>
+                <td>Mat</td>
+                <td>phy</td>
+                <td>Eng</td>
+                <td></td>
+                <td>Che</td>
+                <td colspan="3">LIBRARY</td>
+            </tr>
+            <tr>
+                <td><b>Thursday</b></td>
+                <td>Phy</td>
+                <td>Eng</td>
+                <td>Che</td>
+                <td></td>
+                <td colspan="3">LAB</td>
+                <td>Mat</td>
+            </tr>
+            <tr>
+                <td><b>Friday</b></td>
+                <td colspan="3">LAB</td>
+                <td></td>
+                <td>Mat</td>
+                <td>Che</td>
+                <td>Eng</td>
+                <td>Phy</td>
+            </tr>
+            <tfoot align="center">
+                <tr>
+                    <td><b>Saturday</b></td>
+                    <td>Eng</td>
+                    <td>Che</td>
+                    <td>Mat</td>
+                    <td></td>
+                    <td colspan="3">SEMINAR</td>
+                    <td>SPORTS</td>
+                </tr>
+            </tfoot>
         </tbody>
 
     </table>
