the filling of the table is finished

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <table border="1">
-        
-            <caption><b>TIME TABLE</b></caption><br<br>
+
+        <caption><b>TIME TABLE</b></caption>
+        <br
+        <br>
         <thead align="center">
             <tr>
                 <th>Day/Period</th>
@@ -25,19 +27,18 @@
             </tr>
         </thead>
         <tbody align="center">
-            <tr >
+            <tr>
                 <td><b>Monday</b></td>
                 <td>Eng</td>
                 <td>Mat</td>
                 <td>Che</td>
-                <td></td>
+                <td rowspan="6"><b>L<br>U<br>N<br>C<br>H</b></td>
                 <td colspan="3">LAB</td>
                 <td>Phy</td>
             </tr>
             <tr>
                 <td><b>Tuesday</b></td>
                 <td colspan="3">LAB</td>
-                <td></td>
                 <td>Eng</td>
                 <td>Che</td>
                 <td>Mat</td>
@@ -48,7 +49,6 @@
                 <td>Mat</td>
                 <td>phy</td>
                 <td>Eng</td>
-                <td></td>
                 <td>Che</td>
                 <td colspan="3">LIBRARY</td>
             </tr>
@@ -57,30 +57,27 @@
                 <td>Phy</td>
                 <td>Eng</td>
                 <td>Che</td>
-                <td></td>
                 <td colspan="3">LAB</td>
                 <td>Mat</td>
             </tr>
             <tr>
                 <td><b>Friday</b></td>
                 <td colspan="3">LAB</td>
-                <td></td>
                 <td>Mat</td>
                 <td>Che</td>
                 <td>Eng</td>
                 <td>Phy</td>
             </tr>
-            <tfoot align="center">
-                <tr>
-                    <td><b>Saturday</b></td>
-                    <td>Eng</td>
-                    <td>Che</td>
-                    <td>Mat</td>
-                    <td></td>
-                    <td colspan="3">SEMINAR</td>
-                    <td>SPORTS</td>
-                </tr>
-            </tfoot>
+            <tr>
+                <td><b>Saturday</b></td>
+                <td>Eng</td>
+                <td>Che</td>
+                <td>Mat</td>
+                <td colspan="3">SEMINAR</td>
+                <td>SPORTS</td>
+            </tr>
+        <tfoot align="center">
+        </tfoot>
         </tbody>
 
     </table>
